Bug 394018 - R shows neither vectors nor matrices
Summary: R shows neither vectors nor matrices
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: r-backend (other bugs)
Version First Reported In: 18.04
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Filipe Saraiva
URL:
Keywords:
Depends on:
Blocks: 299385
  Show dependency treegraph
 
Reported: 2018-05-08 20:13 UTC by Nikita Sirgienko
Modified: 2022-01-12 02:41 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.04.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikita Sirgienko 2018-05-08 20:13:19 UTC
R don't show output for variable, if variable is vector, or matrix.

Reproduce: Always

Steps to reproduce:
1) Start R session
2) Write a command "a <- c(1,2,3)" 
3) Write a command "a"

Expected result: "[1] 1 2 3" 

Actual result: Nothing
Comment 1 Nikita Sirgienko 2018-05-20 15:25:32 UTC
Git commit d4a89e2638fe8c0f476848fe2f4fbd5b80b0f323 by Nikita Sirgienko.
Committed on 20/05/2018 at 15:25.
Pushed by sirgienko into branch 'master'.

Add support for "application/x-extension-html" mimetype in R expression, because some systems use this mimetype for html, instead of "text/html"
FIXED-IN: 18.04.2

M  +7    -3    src/backends/R/rexpression.cpp

https://commits.kde.org/cantor/d4a89e2638fe8c0f476848fe2f4fbd5b80b0f323
Comment 2 Alexander Semke 2018-06-03 08:27:44 UTC
Git commit 50c130c20f984cb7f17e4d3081d72f45560cb2e6 by Alexander Semke, on behalf of Nikita Sirgienko.
Committed on 03/06/2018 at 08:27.
Pushed by asemke into branch 'Applications/18.04'.

Add support for "application/x-extension-html" mimetype in R expression, because some systems use this mimetype for html, instead of "text/html"
FIXED-IN: 18.04.2

M  +7    -3    src/backends/R/rexpression.cpp

https://commits.kde.org/cantor/50c130c20f984cb7f17e4d3081d72f45560cb2e6
Comment 3 skierpage 2022-01-12 02:41:34 UTC
(In reply to Nikita Sirgienko from comment #1)
> Add support for "application/x-extension-html" mimetype in R expression,
> because some systems use this mimetype for html, instead of "text/html"
According to https://gitlab.gnome.org/GNOME/glib/-/issues/2511 , this can happen when applications, primarily browsers, call the glib function `g_desktop_app_info_set_as_default_for_extension()`; it creates a new fake "user extension" mimetype, application/x-extension-foo. The unexpected mimetype causes various bugs with applications. That bug report has a workaround to get rid of these mimetypes.