Add support for "application/x-extension-html" mimetype in R expression, because some systems use this mimetype for html, instead of "text/html"

BUG: 394018
FIXED-IN: 18.04.2